# search-algorithms

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  benchmark.cpp  benchmark.hpp  binary_search.cpp  binary_search.hpp  constants.hpp  generate_list.cpp  generate_list.hpp  jump_search.cpp  jump_search.hpp  linear_search.cpp  linear_search.hpp  main.cpp  output.cpp  output.hpp  ternary_search.cpp  ternary_search.hpp
test/: CMakeLists.txt  testcase.cpp  testsuit.cpp
